[package]
name = "hyperlight-guest-bin-shim"
links = "c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
buddy_system_allocator = "0.11.0"
hyperlight-common = { workspace = true }
hyperlight-guest = { workspace = true }
log = { version = "0.4", default-features = false }
spin = "0.10.0"

[features]
default = ["libc", "printf"]
libc = [] # compile musl libc
printf = [] # compile printf


[build-dependencies]
cc = "1.2"
cfg-if = "1.0"
glob = "0.3.2"